--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,16 @@
     max-height: 200px;
     overflow: scroll;
 }
+
+.my-button-container {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 10px;
+}
+
+.my-button-container button {
+    display: table-cell;
+    text-align: center;
+}
