working through button layouts

--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,13 @@
 .sidebar-button {
     transform: scale(0.6, 0.6);
 }
+
+.sidebar-table-item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+}
+
+.sidebar-table-row {
+    table-layout: auto;
+}
