trying something new - details/summary tags

--- a/styles.css
+++ b/styles.css
@@ -44,15 +44,15 @@
     display: table-cell;
     text-align: center;
 }
-
 .sidebar-container {
     user-select: text;
 }
 
 .sidebar-button {
-    transform: scale(0.6, 0.6);
+    transform: scale(0.8, 0.8);
 }
 
+/*
 .sidebar-table-item {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -62,3 +62,4 @@
 .sidebar-table-row {
     table-layout: auto;
 }
+*/
