--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,10 @@
     font-size: x-small;
 }
 
+.code__suggestion_title {
+    text-overflow: ellipsis;
+}
+
 /*
 .sidebar-table-item {
     overflow: hidden;
